--- a/temp2/package.json
+++ b/temp2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "temp2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2"
   }
 }
